Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -128,7 +128,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyMiocMpiP0SQ1/tQHOdUFsa",
+      "authorship_tag": "ABX9TyOJOVq7vqxMkp3FEFjjO85z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6037,7 +6037,7 @@
         "id": "bSoeQuPDosn7"
       },
       "source": [
-        "#### "
+        "####  10830번"
       ]
     },
     {
@@ -6046,7 +6046,39 @@
         "id": "KLIeBOtEosn7"
       },
       "source": [
-        ""
+        "l = []\n",
+        "\n",
+        "n, b = map(int, input().split())\n",
+        "\n",
+        "for _ in range(n):\n",
+        "    l.append(list(map(int, input().split())))\n",
+        "\n",
+        "def f_0(x, y):\n",
+        "    t = []\n",
+        "    for i in range(n):\n",
+        "        t_0 = []\n",
+        "        for j in range(n):\n",
+        "            t_1 = 0\n",
+        "            for k in range(n):\n",
+        "                t_1 += x[i][k] * y[k][j]\n",
+        "            \n",
+        "            t_0.append(t_1 % 1000)\n",
+        "        t.append(t_0)\n",
+        "    return t\n",
+        "\n",
+        "def f_1(x,y): \n",
+        "    if y == 1:\n",
+        "        return x\n",
+        "    \n",
+        "    t = f_1(x, y//2)\n",
+        "\n",
+        "    if y % 2 == 0:\n",
+        "        return f_0(t,t)\n",
+        "    else:\n",
+        "        return f_0(f_0(t,t), x)\n",
+        "\n",
+        "for i in f_1(l, b):\n",
+        "    print(*list(map(lambda x : x % 1000, i)))"
       ],
       "execution_count": null,
       "outputs": []
@@ -6083,13 +6115,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Iw42zEAjosth"
+        "id": "Iw42zEAjosth",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9caf74d9-c417-41b6-f614-5329c545be3b"
       },
       "source": [
-        ""
+        "t = lambda x : x % 10\n",
+        "t(13)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
     },
     {
       "cell_type": "markdown",
