Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -128,7 +128,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyOJOVq7vqxMkp3FEFjjO85z",
+      "authorship_tag": "ABX9TyMuWw11wdnxYv7yo+7/iRFy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5841,9 +5841,9 @@
         "for _ in range(n):  # 입력 받는 값에 빈칸을 삽입한 후 split 진행\n",
         "    l.append(list(map(int, sys.stdin.readline().rstrip('\\n').split())))\n",
         "\n",
-        "minus = 0\n",
-        "zero = 0\n",
-        "plus = 0\n",
+        "minus = 0 # -1인 종이 카운트\n",
+        "zero = 0 # 0인 종이 카운트\n",
+        "plus = 0 # 1인 종이 카운트\n",
         "\n",
         "def f(list_x, n_x):  # 재귀함수를 사용한 분할정복\n",
         "    global minus\n",
@@ -5861,11 +5861,11 @@
         "            plus += 1\n",
         "            return\n",
         "\n",
-        "    s = [] \n",
+        "    s = [] # 값이 다양한지 판단하는 리스트\n",
         "    for i in list_x: # 2차원 리스트 1차원 리스트로 변환\n",
         "        s += i\n",
-        "\n",
         "    s = list(set(s)) # 중복 값 제거\n",
+        "\n",
         "    if len(s) == 1: # 값이 하나면\n",
         "        if s[0] == -1: # -1 값이면\n",
         "            minus += 1 # minus +1\n",
@@ -5877,22 +5877,21 @@
         "            plus += 1\n",
         "            return\n",
         "\n",
-        "    y = int(n_x/3)\n",
-        "    t = [i for i in range(0, n_x, y)]\n",
+        "    y = int(n_x/3) # n_x값 3분할\n",
+        "    t = [i for i in range(0, n_x, y)] # (0,n_x) 3분할\n",
         "\n",
         "    # 9분할 진행\n",
-        "    f([list_x[i][t[0]:t[0]+y] for i in range(t[1])], y) \n",
-        "    f([list_x[i][t[1]:t[1]+y] for i in range(t[1])], y) \n",
-        "    f([list_x[i][t[2]:] for i in range(t[1])], y)\n",
+        "    f([list_x[i][t[0]:t[0]+y] for i in range(t[1])], y) # 1분면\n",
+        "    f([list_x[i][t[1]:t[1]+y] for i in range(t[1])], y) # 2분면\n",
+        "    f([list_x[i][t[2]:] for i in range(t[1])], y) # 3분면\n",
         "\n",
-        "    f([list_x[i][t[0]:t[0]+y] for i in range(t[1], t[2])], y)\n",
-        "    f([list_x[i][t[1]:t[1]+y] for i in range(t[1], t[2])], y)\n",
-        "    f([list_x[i][t[2]:] for i in range(t[1], t[2])], y)\n",
+        "    f([list_x[i][t[0]:t[0]+y] for i in range(t[1], t[2])], y) # 4분면\n",
+        "    f([list_x[i][t[1]:t[1]+y] for i in range(t[1], t[2])], y) # 5분면\n",
+        "    f([list_x[i][t[2]:] for i in range(t[1], t[2])], y) # 6분면\n",
         "\n",
-        "    f([list_x[i][t[0]:t[0]+y] for i in range(t[2], n_x)], y)\n",
-        "    f([list_x[i][t[1]:t[1]+y] for i in range(t[2], n_x)], y)\n",
-        "    f([list_x[i][t[2]:] for i in range(t[2], n_x)], y)\n",
-        "\n",
+        "    f([list_x[i][t[0]:t[0]+y] for i in range(t[2], n_x)], y) # 7분면\n",
+        "    f([list_x[i][t[1]:t[1]+y] for i in range(t[2], n_x)], y) # 8분면\n",
+        "    f([list_x[i][t[2]:] for i in range(t[2], n_x)], y) # 9분면\n",
         "\n",
         "f(l, n)  # 재귀함수 실행\n",
         "\n",
@@ -5922,15 +5921,14 @@
         "\n",
         "def f(x,y): # x는 인수분해, y는 나누기 # 10 , 12\n",
         "    global c\n",
-        "\n",
-        "    if y == 1:\n",
-        "        return x % c\n",
+        "    if y == 1: # 1거듭제곱이면\n",
+        "        return x % c # x를 c로 나눈 나머지 값 return\n",
         "    \n",
-        "    t = f(x,y//2)\n",
-        "    if y % 2 == 0:\n",
-        "        return t*t%c\n",
-        "    else:\n",
-        "        return t*t*x%c\n",
+        "    t = f(x,y//2) # x의 y/2 거듭제곱 \n",
+        "    if y % 2 == 0: # y가 짝수이면\n",
+        "        return t*t%c # x의 y/2 거듭제곱 을 제곱함.\n",
+        "    else: # y가 홀수면\n",
+        "        return t*t*x%c # x의 y/2 거듭제곱 을 제곱 후 x를 한번더 곱해줌\n",
         "\n",
         "print(f(a,b))"
       ],
@@ -5956,35 +5954,36 @@
         "# a**p % p = a % p, a ** (p-1) ≡ 1\n",
         "# a**(p-1) ≡ a * (a ** (p-2)) ≡ 1 ( % p) => a의 역원이 a ** (p-2)\n",
         "# 1 / (a % p) ≡ (a ** (p-2))\n",
-        "\n",
         "#nCk ≡ n! / (k!(n-k)!), (mod p)\n",
         "#    ≡ (n! % p) * (1 / (k! % p)) * (1 / ((n-k)! % p)))\n",
         "#    ≡ (n! % p) * (k! % p)**(p-2) * ((n-k)! % p)**(p-2)\n",
+        "\n",
         "n, k = map(int, input().split()) \n",
         "\n",
         "p = 1000000007\n",
         "\n",
-        "def f(x):\n",
+        "def f(x): # factorial 함수 구현\n",
         "    if x == 0:\n",
         "        return 1\n",
         "    else:\n",
-        "        for i in range(x-1, 1, -1):\n",
-        "            x *= i\n",
-        "            x %= p\n",
-        "        return x % p\n",
+        "        for i in range(x-1, 1, -1): # x! = x * (x-1) * (x-2) * ... * 2까지 진행\n",
+        "            x *= i \n",
+        "            x %= p # x를 p로 나눈 나머지 값\n",
+        "        return x % p # x를 p로 나눈 나머지 값\n",
         "\n",
-        "def f_1(x,y): \n",
+        "def f_1(x,y): #거듭 제곱 함수 구현\n",
         "    if y == 1:\n",
         "        return x % p\n",
         "    \n",
-        "    t = f_1(x,y//2)\n",
-        "\n",
-        "    if y % 2 == 0:\n",
-        "        return t*t%p\n",
+        "    t = f_1(x,y//2) # x의 y/2 거듭제곱 \n",
+        "    if y % 2 == 0: # y가 짝수이면 \n",
+        "        return t*t%p # x의 y/2 거듭제곱 을 제곱함.\n",
         "    else:\n",
-        "        return t*t*x%p\n",
+        "        return t*t*x%p # x의 y/2 거듭제곱 을 제곱 후 x를 한번더 곱해줌\n",
         "\n",
-        "print((f(n) * f_1(f(k), p-2) * f_1(f(n-k), p-2)) % p)"
+        "#파르마의 소정리 공식을 이용한\n",
+        "# (n! % p) * (k! % p)**(p-2) * ((n-k)! % p)**(p-2) 식 구현\n",
+        "print((f(n) * f_1(f(k), p-2) * f_1(f(n-k), p-2)) % p) "
       ],
       "execution_count": null,
       "outputs": []
@@ -6006,27 +6005,27 @@
       "source": [
         "n, m = map(int, input().split())\n",
         "A = []\n",
-        "for _ in range(n):\n",
+        "for _ in range(n): # A행렬 입력\n",
         "    A.append(list(map(int, input().split())))\n",
         "\n",
         "m, k = map(int, input().split())\n",
         "B = []\n",
-        "for _ in range(m):\n",
+        "for _ in range(m): # B행렬 입력\n",
         "    B.append(list(map(int, input().split())))\n",
         "\n",
-        "res = []\n",
-        "for i in range(n):\n",
-        "    t = []\n",
-        "    for j in range(k):\n",
-        "        x = 0\n",
-        "        for l in range(m):\n",
-        "            x += A[i][l] * B[l][j]\n",
+        "res = [] # 결과 res행렬\n",
+        "for i in range(n): # A행렬의 i번째 행\n",
+        "    t = [] # res 행렬에 넣을 i번째 행\n",
+        "    for j in range(k): # B행렬의 j번째 열\n",
+        "        x = 0 # i,j 원소 값\n",
+        "        for l in range(m): # 행렬곱 리스트의 l번째 원소\n",
+        "            x += A[i][l] * B[l][j] # A의 i번째 행과 B의 j번째 열 리스트 곱의 합.\n",
         "\n",
-        "        t.append(x)\n",
-        "    res.append(t)\n",
+        "        t.append(x) # res 행렬에 넣을 i번째 행에 원소 넣기\n",
+        "    res.append(t) # res행렬에 넣을 i번째 행 추가\n",
         "\n",
         "for i in res:\n",
-        "    print(*i)\n"
+        "    print(*i)"
       ],
       "execution_count": null,
       "outputs": []
@@ -6053,7 +6052,7 @@
         "for _ in range(n):\n",
         "    l.append(list(map(int, input().split())))\n",
         "\n",
-        "def f_0(x, y):\n",
+        "def f_0(x, y): # 행렬곱 함수 구현(2740과 같음)\n",
         "    t = []\n",
         "    for i in range(n):\n",
         "        t_0 = []\n",
@@ -6061,21 +6060,19 @@
         "            t_1 = 0\n",
         "            for k in range(n):\n",
         "                t_1 += x[i][k] * y[k][j]\n",
-        "            \n",
-        "            t_0.append(t_1 % 1000)\n",
-        "        t.append(t_0)\n",
+        "            t_0.append(t_1 % 1000) # i,j번째 원소를 1000으로 나눈 나머지\n",
+        "        t.append(t_0) # \n",
         "    return t\n",
         "\n",
-        "def f_1(x,y): \n",
+        "def f_1(x,y): # 거듭제곱 함수 구현(11401번과 같음)\n",
         "    if y == 1:\n",
         "        return x\n",
         "    \n",
         "    t = f_1(x, y//2)\n",
-        "\n",
         "    if y % 2 == 0:\n",
-        "        return f_0(t,t)\n",
+        "        return f_0(t,t) # 행렬곱 함수를 이용.\n",
         "    else:\n",
-        "        return f_0(f_0(t,t), x)\n",
+        "        return f_0(f_0(t,t), x) # # 행렬곱 함수를 이용.\n",
         "\n",
         "for i in f_1(l, b):\n",
         "    print(*list(map(lambda x : x % 1000, i)))"
@@ -6089,7 +6086,7 @@
         "id": "35U4FrTeosqy"
       },
       "source": [
-        "#### "
+        "####   11444번\n"
       ]
     },
     {
@@ -6098,7 +6095,47 @@
         "id": "hsC5yYEposqz"
       },
       "source": [
-        ""
+        "#행렬곱셈 이용 : 힌트로 행렬 곱셈을 이용하는 방법이 소개되어 있었다.\n",
+        "'''\n",
+        "2x2 행렬\n",
+        "(f0 f1)(1 1)^x = (f2x   f1+2x)\n",
+        "(f2 f3)(1 2)     (f2+2x f3+2x) 가 되는 법칙을 알게 되었다.\n",
+        "'''\n",
+        "n = int(input())\n",
+        "\n",
+        "def f_0(x, y): # 행렬곱 함수 구현\n",
+        "    t = []\n",
+        "    for i in range(2):\n",
+        "        t_0 = []\n",
+        "        for j in range(2):\n",
+        "            t_1 = 0\n",
+        "            for k in range(2):\n",
+        "                t_1 += x[i][k] * y[k][j]\n",
+        "            t_0.append(t_1 % 1000000007) # 원소값 1000000007로 나눈 나머지 값\n",
+        "        t.append(t_0)\n",
+        "    return t\n",
+        "\n",
+        "f = [[0,1],[1,2]] # 초기 피보나치 행렬(순서대로 f0, f1, f2, f3)\n",
+        "a = [[1,1],[1,2]] # 거듭 제곱에 사용될 행렬\n",
+        "\n",
+        "def f_1(x,y): # 거듭 제곱 함수 구현\n",
+        "    if y == 1:\n",
+        "        return x\n",
+        "    \n",
+        "    t = f_1(x, y//2)\n",
+        "    if y % 2 == 0:\n",
+        "        return f_0(t,t)\n",
+        "    else:\n",
+        "        return f_0(f_0(t,t), x)\n",
+        "\n",
+        "if n > 3: # n이 4이상\n",
+        "    res = f_0(f, f_1(a, (n-2) // 2)) # f와 a의 x제곱 행렬 계산\n",
+        "    if n % 2:\n",
+        "        print(res[1][1]) # n이 홀수면 2행 2열 출력\n",
+        "    else:\n",
+        "        print(res[1][0]) # n이 짝수면 2행 1열 출력\n",
+        "else:\n",
+        "    print(f[n // 2][n % 2]) # n이 4보다 작으면 해당하는 값 출력"
       ],
       "execution_count": null,
       "outputs": []
@@ -6122,10 +6159,9 @@
         "outputId": "9caf74d9-c417-41b6-f614-5329c545be3b"
       },
       "source": [
-        "t = lambda x : x % 10\n",
-        "t(13)"
+        ""
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
