Colaboratory를 통해 생성됨

--- a/문제해결프로그래밍.ipynb
+++ b/문제해결프로그래밍.ipynb
@@ -17,7 +17,7 @@
         "rOjcJJoYtXZd",
         "wDGrdIDhtWp1"
       ],
-      "authorship_tag": "ABX9TyMIGJdVKTzouqiObiacQZin",
+      "authorship_tag": "ABX9TyMmSuU9wg0XmP0mumc8Jl62",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2873,7 +2873,7 @@
         "id": "JCjJjaIUtXHX"
       },
       "source": [
-        "# 9주차"
+        "# 12주차"
       ]
     },
     {
@@ -2882,7 +2882,117 @@
         "id": "3sUFZ7cEtXHY"
       },
       "source": [
-        ""
+        "### w13/p1 큰 것이 똑똑하다?(Is Bigger Smarter?)\n",
+        "#https://blog.naver.com/samkwon1122/221577092782\n",
+        "elephants = []\n",
+        "\n",
+        "# 더 짧은 sequence를 반환하는 함수\n",
+        "def compare_sequenc(str1, str2):\n",
+        "\tfor i, j in zip(str1, str2):\n",
+        "\t\tif i>j:\n",
+        "\t\t\treturn str2\n",
+        "\t\telif j>i:\n",
+        "\t\t\treturn str1\n",
+        "\n",
+        "\treturn str1\n",
+        "\n",
+        "try:\n",
+        "\tcnt = 1\n",
+        "\twhile True:\n",
+        "\t\tweight, IQ = input().split()\n",
+        "\t\tweight = int(weight)\n",
+        "\t\tIQ = int(IQ)\n",
+        "\t\telephants.append((weight, IQ, cnt))\n",
+        "\t\tcnt+=1\n",
+        "\n",
+        "except:\n",
+        "\t# 무게순으로 정렬\n",
+        "\telephants = sorted(elephants)\n",
+        "\n",
+        "\t# 큰 무게를 저장할 dp\n",
+        "\tdp = [0 for _ in range(len(elephants))] # ? 큰 무게?\n",
+        "\tdp[0] = 1\n",
+        "\n",
+        "\t# 코끼리를 추적할 dp\n",
+        "\ttracking = [[] for _ in range(len(elephants))]\n",
+        "\tresult_tracking = []\n",
+        "\t\n",
+        "\t#print(elephants)\n",
+        "\tfor i in range(1, len(elephants)):\n",
+        "\t\tdp[i] = max(1, dp[i])\n",
+        "\t\ttracking[i] = [elephants[i][2]] # elephans cnt\n",
+        "\t\t\n",
+        "\t\tfor j in range(i):\n",
+        "\t\t\t# elephants[i]보다 elephants[j]의 무게가 덜나가고, 더 IQ가 높으면 진행\n",
+        "\t\t\tif elephants[i][0] > elephants[j][0] and elephants[i][1] < elephants[j][1]:\n",
+        "\t\t\t\t#print('tracking : ',tracking)\n",
+        "\t\t\t\t#print('result : ', result_tracking)\n",
+        "\t\t\t\t#--- 코드 작성\n",
+        "\t\t\t\t#print('tracking[j] : ',tracking[j])\n",
+        "\t\t\t\tdp[i] = max(dp[i], dp[j] + 1)\n",
+        "\t\t\t\t#print('i,j : ',i,j)\n",
+        "\t\t\t\t#print('dp : ',dp)\n",
+        "\t\t\t\t#---\n",
+        "\t\t\t\t\n",
+        "\t\t\t\t# tracking길이가 같으면 sequence가 더 작은 쪽을 선택하도록 한다\n",
+        "\t\t\t\tif len(tracking[j])+1 == len(tracking[i]):\n",
+        "\t\t\t\t\ttracking[i] = compare_sequenc(tracking[j]+[elephants[i][2]], tracking[i])\n",
+        "\t\t\t\telif len(tracking[j])+1 > len(tracking[i]):\n",
+        "\t\t\t\t\ttracking[i] = tracking[j]+[elephants[i][2]]\n",
+        "\n",
+        "\t\t\t\t# 최종 tracking이 더 짧으면 최종트랙킹을 tracking[i]로 바꿔줌\n",
+        "\t\t\t\tif len(result_tracking) < len(tracking[i]):\n",
+        "\t\t\t\t\tresult_tracking = tracking[i]\n",
+        "\t\t\t\t# 만약 길이가 같다면 sequence가 더 작은 것으로 바꾸어준다\n",
+        "\t\t\t\telif len(result_tracking) == len(tracking[i]):\n",
+        "\t\t\t\t\tresult_tracking = compare_sequenc(result_tracking, tracking[i])\n",
+        "\t\n",
+        "\t# 출력\n",
+        "\tprint(max(dp))\n",
+        "\tfor i in result_tracking:\n",
+        "\t\tprint(i)\n",
+        "\n",
+        "\texit()\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "r72Sq-ZWBkWs"
+      },
+      "source": [
+        "### w13/p2 거북이 쌓기(Weight and Measures)_copy\n",
+        "turtle = []\n",
+        "try:\n",
+        "\twhile True:\n",
+        "\t\tweight, strength = input().split()\n",
+        "\t\tweight = int(weight)\n",
+        "\t\tstrength = int(strength)\n",
+        "\t\t# (체력, 몸무게)를 tutle에 저장해주자\n",
+        "\t\tturtle.append((strength, weight))\n",
+        "\n",
+        "except:\n",
+        "\t# 체력순으로 정렬\n",
+        "\tturtle = sorted(turtle)\n",
+        "\n",
+        "\t# 무게를 저장하는 dp, dp[n]은 n개의 거북이들의 최소 무게이다\n",
+        "\tdp = [float('inf') for _ in range(len(turtle))]\n",
+        "\tdp[0] = 0\n",
+        "\t# 가장 높이 쌓을 수 있는 거북이 수\n",
+        "\tmax_turtle = 0\n",
+        "\t#print(turtle)\n",
+        "\tfor i in range(len(turtle)):\n",
+        "\t\tfor j in reversed(range(max_turtle+1)):\n",
+        "\t\t\t# i번째 거북이는 자신의 무게와 j마리의 거북이를 들 수 있어야하고,\n",
+        "\t\t\t# j+1번째 거북이를 위해 총 무게를 최대한 줄여야한다\n",
+        "\t\t\tif turtle[i][0] >= dp[j]+turtle[i][1] and turtle[i][1]+dp[j] < dp[j+1]:\n",
+        "\t\t\t\tdp[j+1] = min(dp[j+1], dp[j] + turtle[i][1]) \t    #'''코드작성'''\n",
+        "\t\t\t\tmax_turtle = max(max_turtle, j+1)\n",
+        "\t\t\t\t#print('dp : ',dp)\n",
+        "\tprint(max_turtle)\n",
+        "\texit()\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -2893,7 +3003,57 @@
         "id": "HmuDkwE_tXHY"
       },
       "source": [
-        ""
+        "### w13/p3 단방향 TSP(Unidirectional TSP)\n",
+        "m = 0; n = 0\n",
+        "\n",
+        "def best_path(matrix):\n",
+        "\tdir = [[None for _ in range(n)] for _ in range(m)] # 빈 행렬\n",
+        "\tfor r in range(m):\n",
+        "\t\tdir[r][0] = (matrix[r][0], r + 1) # 시작점은 항상 첫 번째 열\n",
+        "\n",
+        "\t# Construct minimal weight matrix\n",
+        "\tfor c in range(1, n): # 열의 개수만큼 반복\n",
+        "\t\tfor r in range(m): # 행의 개수만큼 반복\n",
+        "\t\t\t# 위, 옆, 아래 방향 중에 가장 작은 가중치를 가지는 곳을 찾는다.\n",
+        "\t\t\t#'''\t코드 작성\n",
+        "\t\t\tif r-1 > -1:\n",
+        "\t\t\t\tupper = dir[r-1][c-1]\n",
+        "\t\t\telse:\n",
+        "\t\t\t\tupper = dir[m-1][c-1]\n",
+        "\t\t\t\t\n",
+        "\t\t\tleft = dir[r][c-1]\t\n",
+        "\t\t\t\n",
+        "\t\t\tif r+1 < m:\n",
+        "\t\t\t\tunder = dir[r+1][c-1]\t\n",
+        "\t\t\telse:\n",
+        "\t\t\t\tunder = dir[0][c-1]\n",
+        "\t\t\t\n",
+        "\t\t\t#'''\n",
+        "\t\t\t\n",
+        "\t\t\tbest =  min(upper, left, under)   #'''코드 작성'''\n",
+        "\n",
+        "\t\t\t#best : [weight, path, ...]\n",
+        "\t\t\t# 가장 작은 가중치를 가지는 방향으로 한 칸 전진\n",
+        "\t\t\tdir[r][c] = (best[0] + matrix[r][c],) + best[1:] + (r + 1,)\n",
+        "\t\t\t#dir[r][c] = [weight, path]\n",
+        "\t#print(dir)\n",
+        "\t# 끝까지 도착했을 때, 가중치가 가장 적은 경로를 반환한다.\n",
+        "\tmin_path = min(dir[r][-1] for r in range(m))\n",
+        "\n",
+        "\treturn min_path[0], min_path[1:]\n",
+        "\n",
+        "while(True):\n",
+        "\ttry:\n",
+        "\t\tm, n = map(int, input().split())\n",
+        "\t\tmatrix = []\n",
+        "\t\tfor _ in range(m):\n",
+        "\t\t\tmatrix.append(list(map(int, input().split())))\n",
+        "\t\tweight, path = best_path(matrix)\n",
+        "\t\tprint(' '.join(map(str, path)))\n",
+        "\t\tprint(weight)\n",
+        "\t\t\n",
+        "\texcept:\n",
+        "\t\t\tbreak"
       ],
       "execution_count": null,
       "outputs": []
