Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -117,6 +117,13 @@
         "14T3PZXwU5PO",
         "6XU-HwBjU5UD",
         "F4l7j-IMbdBn",
+        "qzTRR-kForE2",
+        "tWj1_3nHorH0",
+        "VvMq1AL7orKj",
+        "1Mqy6YQHorNT",
+        "C8-hqFACoskw",
+        "bSoeQuPDosn7",
+        "35U4FrTeosqy",
         "oqZ3i95jWOSr",
         "WzwUHBI4pjsC",
         "n-jLje1Epjv5",
@@ -128,7 +135,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyMuWw11wdnxYv7yo+7/iRFy",
+      "authorship_tag": "ABX9TyN8HgG3aomoipC0Pl9b0Sa8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6146,34 +6153,70 @@
         "id": "_FOjrbqBosth"
       },
       "source": [
-        "#### "
+        "####  (***)6549번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Iw42zEAjosth",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "9caf74d9-c417-41b6-f614-5329c545be3b"
+        "id": "Iw42zEAjosth"
       },
       "source": [
-        ""
+        "# 스택과, 분할정복의 대표적인 문제 # https://st-lab.tistory.com/255\n",
+        "\n",
+        "### 분할 정복으로 구현\n",
+        "def f(start,end):\n",
+        "    \n",
+        "    if start == end:\n",
+        "        return l[start]\n",
+        "    \n",
+        "    mid = (start + end) // 2\n",
+        "    \n",
+        "    left = f(start, mid)\n",
+        "    right = f(mid+1, end)\n",
+        "\n",
+        "    max_area = max(left, right)\n",
+        "\n",
+        "    to_left = mid\n",
+        "    to_right = mid\n",
+        "    h = l[mid]\n",
+        "\n",
+        "    max_area_0 = h\n",
+        "\n",
+        "    while start < to_left and to_right < end:\n",
+        "        \n",
+        "        if l[to_left - 1] < l[to_right + 1]:\n",
+        "            to_right += 1\n",
+        "            h = min(h, l[to_right])\n",
+        "        else:\n",
+        "            to_left -= 1\n",
+        "            h = min(h, l[to_left])\n",
+        "        \n",
+        "        max_area_0 = max(max_area_0, h * (to_right - to_left + 1))\n",
+        "    \n",
+        "    while start < to_left:\n",
+        "        to_left -= 1\n",
+        "        h = min(h, l[to_left])\n",
+        "        max_area_0 = max(max_area_0, h * (to_right - to_left + 1))\n",
+        "    \n",
+        "    while to_right < end:\n",
+        "        to_right += 1\n",
+        "        h = min(h, l[to_right])\n",
+        "        max_area_0 = max(max_area_0, h * (to_right - to_left + 1))\n",
+        "    \n",
+        "    max_area = max(max_area, max_area_0)\n",
+        "\n",
+        "    return max_area\n",
+        "\n",
+        "while True:\n",
+        "    l = list(map(int, input().split()))\n",
+        "    if l == [0]:\n",
+        "        break\n",
+        "    \n",
+        "    print(f(1,len(l)-1)) # 첫 번째 수는 직사각형의 수이다."
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 15
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -6181,7 +6224,7 @@
         "id": "cNZto4c8osxQ"
       },
       "source": [
-        "#### "
+        "####  (*****)2261번"
       ]
     },
     {
@@ -6190,7 +6233,59 @@
         "id": "eC4Ls3rJosxR"
       },
       "source": [
-        ""
+        "#https://st-lab.tistory.com/256# https://st-lab.tistory.com/256\n",
+        "\n",
+        "import sys\n",
+        "\n",
+        "l = []\n",
+        "for _ in range(int(input())):\n",
+        "    l.append(list(map(int, sys.stdin.readline().rstrip('\\n').split())))\n",
+        "\n",
+        "\n",
+        "def brute(start, end):\n",
+        "    min_value = float('inf')\n",
+        "    for i in range(start, end):\n",
+        "        for j in range(i+1, end+1):\n",
+        "            min_value = min(min_value, abs(\n",
+        "                l[i][0] - l[j][0])**2 + abs(l[i][1] - l[j][1])**2)\n",
+        "\n",
+        "    return min_value\n",
+        "\n",
+        "\n",
+        "def f(start, end):\n",
+        "    if end - start + 1 < 4:\n",
+        "        return brute(start, end)\n",
+        "\n",
+        "    mid = (end + start) // 2\n",
+        "    left = f(start, mid)\n",
+        "    right = f(mid + 1, end)\n",
+        "\n",
+        "    min_value = min(left, right)\n",
+        "\n",
+        "    mid_x = l[mid][0]\n",
+        "\n",
+        "    p_list = []\n",
+        "\n",
+        "    for i in range(start, end+1):\n",
+        "        dist_x = l[i][0] - mid_x\n",
+        "        if dist_x**2 < min_value:\n",
+        "            p_list.append(l[i])\n",
+        "\n",
+        "    p_list = sorted(p_list, key=lambda x: x[1])  # 후보군들 y기준으로 정렬\n",
+        "    for i in range(len(p_list)-1):\n",
+        "        for j in range(i+1, len(p_list)):\n",
+        "            dist_y = p_list[i][1] - p_list[j][1]\n",
+        "            if dist_y ** 2 < min_value:\n",
+        "                min_value = min(min_value, abs(\n",
+        "                    p_list[i][0] - p_list[j][0])**2 + abs(p_list[i][1] - p_list[j][1])**2)\n",
+        "            else:\n",
+        "                break\n",
+        "\n",
+        "    return min_value\n",
+        "\n",
+        "\n",
+        "l = sorted(l, key=lambda x: x[0])\n",
+        "print(f(0, len(l)-1))"
       ],
       "execution_count": null,
       "outputs": []
