Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -135,7 +135,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyN8HgG3aomoipC0Pl9b0Sa8",
+      "authorship_tag": "ABX9TyMRLSgWXdaEVp+rHoJawB5r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6296,7 +6296,7 @@
         "id": "rKOdiegqolxT"
       },
       "source": [
-        "### **단계 : ===========**"
+        "### 21단계 : 이분탐색===========**"
       ]
     },
     {
@@ -6305,13 +6305,190 @@
         "id": "tX4YIkhZolxU"
       },
       "source": [
-        "#### "
+        "####  1920번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "osUZN7KColxU"
+      },
+      "source": [
+        "n = int(input())\n",
+        "l = list(map(int, input().split()))\n",
+        "\n",
+        "m = int(input())\n",
+        "s = list(map(int, input().split()))\n",
+        "\n",
+        "l.sort()\n",
+        "\n",
+        "for num in s:\n",
+        "    left, right = 0, len(l) - 1\n",
+        "\n",
+        "    t = False\n",
+        "\n",
+        "    while True:\n",
+        "        mid = (left + right) // 2\n",
+        "        if num == l[mid]:\n",
+        "            print(1)\n",
+        "            t = True\n",
+        "            break\n",
+        "        elif num > l[mid]:\n",
+        "            left = mid + 1\n",
+        "        elif num < l[mid]:\n",
+        "            right = mid - 1\n",
+        "        \n",
+        "        if left > right:\n",
+        "            break\n",
+        "\n",
+        "    if not t:\n",
+        "        print(0)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xObXGl3dMAk2"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Bsj3xtp4MAk2"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "owkupsdXMAuW"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SHYJ6nP5MAuW"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EznoGG1TMA1G"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JW6EIStgMA1G"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qoewhVFiMA6u"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "djI5GqS3MA6u"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nky_PfziMA-9"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EG7quulgMA--"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QeNapogXMBDG"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VaaqTU4mMBDG"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Jc_IjbKpL6wm"
+      },
+      "source": [
+        "### **단계 : ===========**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RQtuu3rBL6wn"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "88W--dAXL6wn"
       },
       "source": [
         ""
