--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -135,7 +135,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyMRLSgWXdaEVp+rHoJawB5r",
+      "authorship_tag": "ABX9TyMUKBFldre3NqnzrdN5bqoM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6353,19 +6353,107 @@
         "id": "xObXGl3dMAk2"
       },
       "source": [
-        "#### "
+        "####  10816번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Bsj3xtp4MAk2"
+        "id": "Bsj3xtp4MAk2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7cabd125-53cc-4902-9802-951b2fb478ff"
       },
       "source": [
-        ""
+        "'''\n",
+        "# py3로 할때만 됨.\n",
+        "import sys\n",
+        "n = int(input())\n",
+        "l = list(map(int, sys.stdin.readline().rstrip('\\n').split()))\n",
+        "\n",
+        "m = int(input())\n",
+        "s = list(map(int, sys.stdin.readline().rstrip('\\n').split()))\n",
+        "\n",
+        "l.sort()\n",
+        "\n",
+        "dic = {}\n",
+        "\n",
+        "for i in range(m):\n",
+        "    left, right = 0, len(l) - 1\n",
+        "\n",
+        "    t = False\n",
+        "\n",
+        "    while True:\n",
+        "        mid = (left + right) // 2\n",
+        "        if s[i] == l[mid]:\n",
+        "            t = 1\n",
+        "            start = mid - 1\n",
+        "            while True:\n",
+        "                if start < 0 or s[i] != l[start]:\n",
+        "                    break\n",
+        "                \n",
+        "                start -= 1\n",
+        "                t += 1\n",
+        "\n",
+        "            end = mid + 1\n",
+        "            #print('start, mid, end, s[i]',start, mid, end, s[i])\n",
+        "            while True: # 6 7 8 10\n",
+        "                if end >= n or s[i] != l[end]:\n",
+        "                    break\n",
+        "                \n",
+        "                end += 1\n",
+        "                t += 1\n",
+        "#-10 -10 2 3 3 6 7 10 10 10\n",
+        "            break\n",
+        "\n",
+        "        elif s[i] > l[mid]:\n",
+        "            left = mid + 1\n",
+        "        elif s[i] < l[mid]:\n",
+        "            right = mid - 1\n",
+        "        \n",
+        "        if left > right:\n",
+        "            break\n",
+        "\n",
+        "    if not t:\n",
+        "        dic[s[i]] = 0\n",
+        "    else:\n",
+        "        dic[s[i]] = t\n",
+        "\n",
+        "print(*[dic[i] for i in s])\n",
+        "'''\n",
+        "\n",
+        "import sys\n",
+        "\n",
+        "n = int(input())\n",
+        "l = list(map(int, sys.stdin.readline().rstrip('\\n').split()))\n",
+        "\n",
+        "m = int(input())\n",
+        "s = list(map(int, sys.stdin.readline().rstrip('\\n').split()))\n",
+        "\n",
+        "dic = {}\n",
+        "for i in l:\n",
+        "    if i in dic:\n",
+        "        dic[i] += 1\n",
+        "    else:\n",
+        "        dic[i] = 1\n",
+        "\n",
+        "print(*[dic[i] if i in dic else 0 for i in s])\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "6 3 2 10 10 10 -10 -10 7 3\n",
+            "8\n",
+            "10 9 -5 2 3 4 5 -10\n",
+            "3 0 0 1 2 0 0 2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
