Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -135,7 +135,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyMUKBFldre3NqnzrdN5bqoM",
+      "authorship_tag": "ABX9TyNkBp0F9SRsFqWC4ngeWugC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6359,11 +6359,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Bsj3xtp4MAk2",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "7cabd125-53cc-4902-9802-951b2fb478ff"
+        "id": "Bsj3xtp4MAk2"
       },
       "source": [
         "'''\n",
@@ -6440,20 +6436,8 @@
         "\n",
         "print(*[dic[i] if i in dic else 0 for i in s])\n"
       ],
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "10\n",
-            "6 3 2 10 10 10 -10 -10 7 3\n",
-            "8\n",
-            "10 9 -5 2 3 4 5 -10\n",
-            "3 0 0 1 2 0 0 2\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -6461,7 +6445,7 @@
         "id": "owkupsdXMAuW"
       },
       "source": [
-        "#### "
+        "####  1654번"
       ]
     },
     {
@@ -6470,7 +6454,32 @@
         "id": "SHYJ6nP5MAuW"
       },
       "source": [
-        ""
+        "k, n = map(int, input().split())\n",
+        "\n",
+        "l = []\n",
+        "for _ in range(k):\n",
+        "    l.append(int(input()))\n",
+        "\n",
+        "start = 1\n",
+        "end = max(l)\n",
+        "\n",
+        "while True:\n",
+        "    t = 0\n",
+        "    mid = (start + end) // 2\n",
+        "    for i in l:\n",
+        "        t += (i // mid)\n",
+        "    \n",
+        "    #print('start, end , mid',start, end, mid)\n",
+        "    if start > end:\n",
+        "        break\n",
+        "\n",
+        "    elif t < n:\n",
+        "        end = mid - 1\n",
+        "        \n",
+        "    else:\n",
+        "        start = mid + 1\n",
+        "\n",
+        "print(end)"
       ],
       "execution_count": null,
       "outputs": []
