Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -135,7 +135,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyNkBp0F9SRsFqWC4ngeWugC",
+      "authorship_tag": "ABX9TyOSiO+5trm/GHuANzeP9CT8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6490,19 +6490,56 @@
         "id": "EznoGG1TMA1G"
       },
       "source": [
-        "#### "
+        "####  2805번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JW6EIStgMA1G"
+        "id": "JW6EIStgMA1G",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bee14b73-dedb-4c47-dfb0-d1a579b1acf1"
       },
       "source": [
-        ""
+        "import sys\n",
+        "n, m = map(int, input().split())\n",
+        "\n",
+        "l = list(map(int, input().split()))\n",
+        "start = 1\n",
+        "end = max(l)\n",
+        "\n",
+        "while True:\n",
+        "    \n",
+        "    mid = (start + end) // 2\n",
+        "    t = [i - mid if i > mid else 0 for i in l]\n",
+        "\n",
+        "    #print('start, end',start,end,t)\n",
+        "    t = sum(t)\n",
+        "\n",
+        "    if start > end:\n",
+        "        break\n",
+        "    \n",
+        "    elif t < m:\n",
+        "        end = mid - 1\n",
+        "    else:\n",
+        "        start = mid + 1\n",
+        "\n",
+        "print(end)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3 1\n",
+            "1 2 2\n",
+            "1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
