Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -6,6 +6,7 @@
       "name": "[BOJ]백준 단계별 문제풀이.ipynb",
       "provenance": [],
       "collapsed_sections": [
+        "omsqU4scfCpl",
         "POAYGCfMe_0s",
         "SwNOozo2J2Qk",
         "4KG0dQ5_J5k_",
@@ -124,7 +125,6 @@
         "C8-hqFACoskw",
         "bSoeQuPDosn7",
         "35U4FrTeosqy",
-        "oqZ3i95jWOSr",
         "WzwUHBI4pjsC",
         "n-jLje1Epjv5",
         "kg3C85P2pkCh",
@@ -135,7 +135,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyOSiO+5trm/GHuANzeP9CT8",
+      "authorship_tag": "ABX9TyO2mjSUFXLQtpQOHtnHEVyz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6528,7 +6528,7 @@
         "\n",
         "print(end)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6547,7 +6547,7 @@
         "id": "qoewhVFiMA6u"
       },
       "source": [
-        "#### "
+        "####  2110번"
       ]
     },
     {
@@ -6556,7 +6556,23 @@
         "id": "djI5GqS3MA6u"
       },
       "source": [
-        ""
+        "import sys\n",
+        "n, c = map(int, input().split())\n",
+        "\n",
+        "l = []\n",
+        "for _ in range(n):\n",
+        "    l.append(int(input()))\n",
+        "\n",
+        "start = 0\n",
+        "end = n-1\n",
+        "\n",
+        "t = c - 2\n",
+        "while True:\n",
+        "    if t == 0:\n",
+        "        break\n",
+        "\n",
+        "    mid = (start + end) // 2\n",
+        "    "
       ],
       "execution_count": null,
       "outputs": []
@@ -7010,13 +7026,67 @@
         "id": "BBOyONnAphxq"
       },
       "source": [
-        "####"
+        "#### 1075번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "aOhI8-OPpiEp"
+      },
+      "source": [
+        "n = input() # n str형태로 입력\n",
+        "n = n[:-2] # n의 뒤의 두자리 숫자 빼기\n",
+        "\n",
+        "f = int(input()) # f값 int 형태로 입력받기\n",
+        "\n",
+        "for i in range(0,100): # 두자리 숫자니까 0~99까지\n",
+        "    if i < 10: # i가 한자리 숫자라면\n",
+        "        t = '0' + str(i) # 앞에 0 추가하기\n",
+        "        if int(n + t) % f == 0: # 뒤에 i가 추가된 n이 f로 나누어진다면\n",
+        "            break # 브레이크\n",
+        "    else:\n",
+        "        t = str(i) # i가 두자리 이상이면 문자열 그대로 입력\n",
+        "        if int(n + t) % f == 0: # i가 추가된 n이 f로 나누어진다면\n",
+        "            break # 브레이크\n",
+        "print(t) # 뒤에 두자리 숫자 출력"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cwLrxQzg0oRG"
+      },
+      "source": [
+        "####"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qXV3eY2H0oRH"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NOcjjp8g0oUZ"
+      },
+      "source": [
+        "####"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LEEomLIN0oUZ"
       },
       "source": [
         ""
