--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -135,7 +135,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyO2mjSUFXLQtpQOHtnHEVyz",
+      "authorship_tag": "ABX9TyNX9ikPt6FZWwqTd2UifJTI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7060,7 +7060,7 @@
         "id": "cwLrxQzg0oRG"
       },
       "source": [
-        "####"
+        "#### 1032번"
       ]
     },
     {
@@ -7069,7 +7069,19 @@
         "id": "qXV3eY2H0oRH"
       },
       "source": [
-        ""
+        "n = int(input())\n",
+        "\n",
+        "res = ' '.join(input()).split() # 첫번째 문자열을 리스트화\n",
+        "t = len(res) # 리스트 길이\n",
+        "\n",
+        "for _ in range(n-1): # 첫 번째 문자열과 그 이후에 들어오는 문자열 비교\n",
+        "    x = input() # 그 이후에 들어오는 문자열을 저장\n",
+        "    for i in range(t): # res리스트 길이 만큼 반복\n",
+        "        if x[i] != res[i]: # 각 인덱스의 값이 다른 경우\n",
+        "            res[i] = '?' # '?'삽입\n",
+        "\n",
+        "for i in res: # 결과 값 출력\n",
+        "    print(i,end='')"
       ],
       "execution_count": null,
       "outputs": []
