Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -135,7 +135,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyNX9ikPt6FZWwqTd2UifJTI",
+      "authorship_tag": "ABX9TyNFtwJKzq87sxnWErOXHwGC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6559,20 +6559,31 @@
         "import sys\n",
         "n, c = map(int, input().split())\n",
         "\n",
-        "l = []\n",
-        "for _ in range(n):\n",
-        "    l.append(int(input()))\n",
+        "l = [int(sys.stdin.readline().rstrip('\\n')) for _ in range(n)]\n",
+        "l.sort()\n",
         "\n",
-        "start = 0\n",
-        "end = n-1\n",
-        "\n",
-        "t = c - 2\n",
+        "start = 1\n",
+        "end = l[-1] - 1\n",
         "while True:\n",
-        "    if t == 0:\n",
+        "    if start > end:\n",
         "        break\n",
         "\n",
         "    mid = (start + end) // 2\n",
-        "    "
+        "\n",
+        "    t = 1\n",
+        "    res = l[0] + mid\n",
+        "\n",
+        "    for i in range(1, len(l)):\n",
+        "        if res <= l[i]:\n",
+        "            t += 1\n",
+        "            res = l[i] + mid\n",
+        "\n",
+        "    if t >= c:\n",
+        "        start = mid + 1\n",
+        "    else:\n",
+        "        end = mid - 1\n",
+        "\n",
+        "print(end)\n"
       ],
       "execution_count": null,
       "outputs": []
