--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -6,7 +6,6 @@
       "name": "[BOJ]백준 단계별 문제풀이.ipynb",
       "provenance": [],
       "collapsed_sections": [
-        "omsqU4scfCpl",
         "POAYGCfMe_0s",
         "SwNOozo2J2Qk",
         "4KG0dQ5_J5k_",
@@ -135,7 +134,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyNFtwJKzq87sxnWErOXHwGC",
+      "authorship_tag": "ABX9TyMyDNl4XzFvKxkdNpy45JcQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6594,19 +6593,52 @@
         "id": "nky_PfziMA-9"
       },
       "source": [
-        "#### "
+        "####  1300번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EG7quulgMA--"
+        "id": "EG7quulgMA--",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "61b8fda0-64ca-4046-b1cb-5166fbda191c"
       },
       "source": [
-        ""
+        "n = int(input())\n",
+        "k = int(input())\n",
+        "\n",
+        "start = 0\n",
+        "end = n*n - 1\n",
+        "\n",
+        "while True:\n",
+        "    mid = (start+end) // 2\n",
+        "\n",
+        "\n",
+        "1  2  3  4  5\n",
+        "2  4  6  8 10\n",
+        "3  6  9 12 15\n",
+        "4  8 12 16 20 \n",
+        "5 10 15 20 25\n",
+        "\n",
+        "\n",
+        "1 0\n",
+        "\n",
+        "25 20 20 16 15 15 12 12 10 10 9 9 8 8 6 6 5 5 4 4 4 3 3 2 2 1"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "7\n",
+            "6\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -7103,13 +7135,118 @@
         "id": "NOcjjp8g0oUZ"
       },
       "source": [
-        "####"
+        "#### 10815번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "LEEomLIN0oUZ"
+      },
+      "source": [
+        "n = int(input())\n",
+        "N = list(map(int, input().split()))\n",
+        "N.sort()\n",
+        "\n",
+        "m = int(input())\n",
+        "M = list(map(int, input().split()))\n",
+        "\n",
+        "for t in M:\n",
+        "    \n",
+        "    start = 0\n",
+        "    end = n - 1\n",
+        "\n",
+        "    while True:\n",
+        "        mid = (start + end) // 2\n",
+        "        if start > end:\n",
+        "            print(0, end=' ')\n",
+        "            break\n",
+        "\n",
+        "        if t == N[mid]:\n",
+        "            print(1,end=' ')\n",
+        "            break\n",
+        "        elif t < N[mid]:\n",
+        "            end = mid - 1\n",
+        "\n",
+        "        elif t > N[mid]:\n",
+        "            start = mid + 1"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YoZ4CWbgRtfa"
+      },
+      "source": [
+        "####"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MJyM9C81Rtfa"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uPXzp27pRtie"
+      },
+      "source": [
+        "####"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4dmEgiLmRtie"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NmN8u0qcRtlf"
+      },
+      "source": [
+        "####"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W-wpfsVHRtlf"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rJALFDucRtoU"
+      },
+      "source": [
+        "####"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2PFjWPFpRtoU"
       },
       "source": [
         ""
