--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -134,7 +134,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyMyDNl4XzFvKxkdNpy45JcQ",
+      "authorship_tag": "ABX9TyOtsk64i2R8HkKz8NPXIG5M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6627,7 +6627,7 @@
         "\n",
         "25 20 20 16 15 15 12 12 10 10 9 9 8 8 6 6 5 5 4 4 4 3 3 2 2 1"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7180,7 +7180,7 @@
         "id": "YoZ4CWbgRtfa"
       },
       "source": [
-        "####"
+        "#### (*****)2256번"
       ]
     },
     {
@@ -7189,7 +7189,32 @@
         "id": "MJyM9C81Rtfa"
       },
       "source": [
-        ""
+        "import sys\n",
+        "\n",
+        "def find(sticks, kits):\n",
+        "    sticks.sort(reverse=True)\n",
+        "\n",
+        "    bad = [0 for _ in range(len(sticks) + 3)]\n",
+        "    for i in range(1, len(sticks)):\n",
+        "        bad[i+1] = (sticks[i-1] - sticks[i]) ** 2\n",
+        "\n",
+        "    prev = [0 for _ in range(len(sticks) + 1)]\n",
+        "    current = [-1 for _ in range(len(sticks) + 1)]\n",
+        "\n",
+        "    for k in range(1, kits + 1):\n",
+        "        current[3 * k - 1] = float('inf')\n",
+        "        for s in range(3 * k, len(sticks) - abs(k - kits) * 2 + 1):\n",
+        "            if current[s-1] > prev[s-2] + bad[s]:\n",
+        "                current[s] = prev[s-2] + bad[s]\n",
+        "            else:\n",
+        "                current[s] = current[s-1]\n",
+        "        prev, current = current, prev\n",
+        "    return prev[len(sticks)]\n",
+        "\n",
+        "\n",
+        "K, N = map(int, input().split())\n",
+        "chops = [int(sys.stdin.readline()) for _ in range(N)]\n",
+        "print(find(chops, K))"
       ],
       "execution_count": null,
       "outputs": []
